# Learn

./: .gitignore
.github/ISSUE_TEMPLATE/: obsrv-support-incident.yml
.github/workflows/: build.yml
API/: learning-path.md  schema-and-modle.md
API/hello-api/: app.py
ARGOCD/ApplicationSet/: readme.md
ARGOCD/application/: values.yaml
ARGOCD/test/: set.yml  test.yml
CICD/: flow.md
CLICKSTACK/: readme.md
CLOUD/: Gateway.md  VPC.md  cidr.md  example-flow1.md  loadbalancer.md
CLOUD/AWS/: referenece.md
CLOUD/GCP/: default-node-pool.md
DOCKER/: reference.md
FlywayMigraton/: readme.md
GITHUB-FORM/: important-links.md
Helmcharts/: ingress-0.21.0.tgz  opentelemetry-demo-0.38.6.tgz
Helmcharts/hdx-oss-v2/: Chart.yaml  values.yaml
Helmcharts/keycloak/: values.yaml
Helmcharts/nginx-ingress-controller/: values.yaml
IMPORTANT-COMMANDS/: Finternet_dailyCommands.md
INGRESS/: readme.md
KAFKA/: commands.md  kafka-reference.md
KUBERENETS/: PVC-&-PV.md
LINUX/: ZIP.md  file.md
MYAPP/: Dockerfile  app.js
MYAPP/myyapp/: Chart.yaml  (+1 more)
NETWORKING/: devloper-tool.md
PN/: pn.md
PYTHON/Concepts-keywords/POETRY/pro1/pro1/: pyproject.toml
SHELL-SCRIPTING/: echo.md  read.md  set.md  variables.md
TLS-CERTIFICATES/: Readme.md  ingress-certmanager-letsencrypt.md  quick-example.md  ssl-certificate.md
TODO/: todo.md
VAULT/: vault-modes.md  vaultconcetps.md
WORKSPACE/: HELM_README.md  sunbir-ed.md
docs/: VAULT_ACCOUNT_CREATE_FLOW.md
workflow/: .env-example  .env.example  Dockerfile  Makefile  README.md  go.mod  go.sum  requirements.md
(+172 files in other folders)
